--- a/angular-job-exam/index.html
+++ b/angular-job-exam/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="./inline.bundle.js"></script>
-<script type="text/javascript" src="./polyfills.bundle.js"></script>
-<script type="text/javascript" src="./styles.bundle.js"></script>
-<script type="text/javascript" src="./vendor.bundle.js"></script>
-<script type="text/javascript" src="./main.bundle.js"></script></body>
+<script type="text/javascript" src="angular-job-exam/inline.bundle.js"></script>
+<script type="text/javascript" src="angular-job-exam/polyfills.bundle.js"></script>
+<script type="text/javascript" src="angular-job-exam/styles.bundle.js"></script>
+<script type="text/javascript" src="angular-job-exam/vendor.bundle.js"></script>
+<script type="text/javascript" src="angular-job-exam/main.bundle.js"></script></body>
 </html>
